--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colroAccent">#03DAC5</color>
     <color name="buttonColor">#6FC3D4</color>color>
+    <color name="startblue">#00BFFF</color>color>
+    <color name="endblue">#6495ED</color>color>
 </resources>
