--- a/app/src/main/res/drawable/comment_bg.xml
+++ b/app/src/main/res/drawable/comment_bg.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient
-        android:startColor="#e6378b"
-        android:endColor="#eb88b7" />
+        android:startColor="#C3C7E8"
+        android:endColor="#8D92E4" />
 </shape>
