--- a/app/src/main/res/layout/recycle_view_item.xml
+++ b/app/src/main/res/layout/recycle_view_item.xml
@@ -2,9 +2,9 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="250dp"
     android:layout_marginLeft="30dp"
-    android:layout_marginTop="20dp"
+    android:layout_marginTop="50dp"
     android:layout_marginRight="30dp"
     app:cardCornerRadius="8dp">
 
@@ -15,12 +15,18 @@
         android:orientation="vertical">
 
 
+        <ImageView
+            android:id="@+id/restaurantImageView"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            />
+
         <TextView
             android:id="@+id/titleTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Title"
             android:layout_marginLeft="10dp"
+            android:text="Title"
             android:textSize="22sp"
             android:textStyle="bold" />
 
@@ -29,19 +35,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:text="2020-05-02"
+            android:text="Address"
             android:textSize="18sp" />
 
         <TextView
             android:id="@+id/priceTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="100 $"
             android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
+            android:text="100 $"
             android:textSize="16sp" />
 
     </LinearLayout>
