--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -23,16 +23,11 @@
         android:id="@+id/profileFragment"
         android:name="com.e.wheretoeat.main.fragments.ProfileFragment"
         android:label="fragment_profile"
-        tools:layout="@layout/fragment_profile" />
-    <fragment
-        android:id="@+id/registerFragment2"
-        android:name="com.e.wheretoeat.main.fragments.RegisterFragment"
-        android:label="RegisterFragment" />
-    <fragment
-        android:id="@+id/logInFragment"
-        android:name="com.e.wheretoeat.main.fragments.LogInFragment"
-        android:label="fragment_log_in"
-        tools:layout="@layout/fragment_log_in" />
+        tools:layout="@layout/fragment_profile" >
+        <action
+            android:id="@+id/action_profileFragment_to_splashFragment"
+            app:destination="@id/splashFragment" />
+    </fragment>
     <fragment
         android:id="@+id/splashFragment"
         android:name="com.e.wheretoeat.main.fragments.SplashFragment"
@@ -40,11 +35,22 @@
         <action
             android:id="@+id/action_splashFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_splashFragment_to_registerFragment2"
+            app:destination="@id/registerFragment2" />
     </fragment>
     <fragment
         android:id="@+id/detailFragment"
         android:name="com.e.wheretoeat.main.fragments.DetailFragment"
         android:label="DetailFragment" />
+    <fragment
+        android:id="@+id/registerFragment2"
+        android:name="com.e.wheretoeat.main.fragments.RegisterFragment"
+        android:label="RegisterFragment" >
+        <action
+            android:id="@+id/action_registerFragment2_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
 
 
 </navigation>
