--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -24,47 +24,109 @@
 
         <EditText
             android:id="@+id/userNameEditText"
-            android:layout_width="212dp"
-            android:layout_height="45dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="100dp"
+            android:layout_marginEnd="32dp"
             android:layout_marginBottom="32dp"
             android:autofillHints="Username"
-            android:layout_marginTop="100dp"
-        app:layout_constraintTop_toBottomOf="@id/textView"
             android:drawablePadding="10dp"
             android:hint="Username"
             android:inputType="textPersonName"
-            app:layout_constraintBottom_toTopOf="@id/passwordEditText"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textView"
             tools:ignore="LabelFor" />
 
+        <TextView
+            android:id="@+id/addPictureTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginBottom="32dp"
+            android:text="Add a picture:"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/userNameEditText" />
+
+        <ImageButton
+            android:id="@+id/chooseImageButton"
+            android:layout_width="70dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="32dp"
+            android:backgroundTint="@color/background"
+            android:tint="#000000"
+            app:layout_constraintBottom_toBottomOf="@id/addPictureTextView"
+            app:layout_constraintStart_toEndOf="@+id/addPictureTextView"
+            app:layout_constraintTop_toBottomOf="@id/addPictureTextView"
+            app:srcCompat="@drawable/ic_add" />
+
+        <ImageView
+            android:id="@+id/registerProfileImage"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="21dp"
+            android:layout_marginEnd="76dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/userNameEditText" />
 
         <EditText
-            android:id="@+id/passwordEditText"
-            android:layout_width="0dp"
-            android:layout_height="45dp"
+            android:id="@+id/addressEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
             android:layout_marginTop="32dp"
+            android:layout_marginEnd="32dp"
             android:autofillHints="Password"
             android:drawablePadding="10dp"
-            android:hint="Password"
-            android:inputType="textPassword"
+            android:hint="Address"
+            android:inputType="text"
             app:layout_constraintEnd_toEndOf="@id/userNameEditText"
             app:layout_constraintStart_toStartOf="@id/userNameEditText"
-            app:layout_constraintTop_toBottomOf="@+id/userNameEditText"
+            app:layout_constraintTop_toBottomOf="@+id/chooseImageButton"
+            tools:ignore="LabelFor" />
+
+        <EditText
+            android:id="@+id/phoneNumber"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="32dp"
+            android:drawablePadding="10dp"
+            android:hint="Phone"
+            android:inputType="phone"
+            app:layout_constraintEnd_toEndOf="@id/userNameEditText"
+            app:layout_constraintStart_toStartOf="@id/userNameEditText"
+            app:layout_constraintTop_toBottomOf="@+id/addressEditText"
+            tools:ignore="LabelFor" />
+
+        <EditText
+            android:id="@+id/emailEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="32dp"
+            android:drawablePadding="10dp"
+            android:hint="Email"
+            android:inputType="textEmailAddress"
+            app:layout_constraintEnd_toEndOf="@id/userNameEditText"
+            app:layout_constraintStart_toStartOf="@id/userNameEditText"
+            app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
             tools:ignore="LabelFor" />
 
         <Button
             android:id="@+id/saveButton"
             android:layout_width="140dp"
             android:layout_height="40dp"
+            android:layout_marginTop="50dp"
             android:background="@drawable/rounded_button"
             android:text="Save"
             app:backgroundTint="@color/buttonColor"
-            android:layout_marginTop="50dp"
-
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/passwordEditText" />
+            app:layout_constraintTop_toBottomOf="@id/emailEditText" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
