--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -22,6 +22,7 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/profilePic"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:layout_gravity="center_horizontal"
