--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -66,12 +66,21 @@
 
                 <TextView
                     android:id="@+id/userNameTextView"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:layout_marginRight="20dp"
                     android:paddingLeft="20dp"
+
                     android:text="Username"
                     android:textStyle="bold" />
+
+                <ImageButton
+                    android:id="@+id/editUserName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
+                    android:src="@drawable/ic_baseline_edit_24" />
             </LinearLayout>
 
             <LinearLayout
@@ -89,12 +98,20 @@
 
                 <TextView
                     android:id="@+id/addressTextView"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:layout_marginRight="20dp"
                     android:paddingLeft="20dp"
                     android:text="Address"
                     android:textStyle="bold" />
+
+                <ImageButton
+                    android:id="@+id/editAddress"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
+                    android:src="@drawable/ic_baseline_edit_24" />
             </LinearLayout>
 
             <LinearLayout
@@ -112,12 +129,20 @@
 
                 <TextView
                     android:id="@+id/phoneTextView"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:layout_marginRight="20dp"
                     android:paddingLeft="20dp"
                     android:text="Number"
                     android:textStyle="bold" />
+
+                <ImageButton
+                    android:id="@+id/editNumber"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
+                    android:src="@drawable/ic_baseline_edit_24" />
             </LinearLayout>
 
             <LinearLayout
@@ -135,22 +160,29 @@
 
                 <TextView
                     android:id="@+id/emailTextView"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:layout_marginEnd="32dp"
                     android:paddingLeft="20dp"
                     android:text="Email"
                     android:textStyle="bold" />
+
+                <ImageButton
+                    android:id="@+id/editEmail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
+                    android:src="@drawable/ic_baseline_edit_24" />
             </LinearLayout>
-
-
         </LinearLayout>
+
 
         <Button
             android:id="@+id/logOutButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
+            android:layout_gravity="center"
             android:layout_marginTop="55dp"
             android:background="@drawable/buttonstyle"
             android:text="Log Out"
