--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -27,6 +27,12 @@
         <action
             android:id="@+id/action_profileFragment_to_splashFragment"
             app:destination="@id/splashFragment" />
+        <action
+            android:id="@+id/action_profileFragment_to_registerFragment2"
+            app:destination="@id/registerFragment2" />
+        <action
+            android:id="@+id/action_profileFragment_to_editDialogFragment"
+            app:destination="@id/editDialogFragment" />
     </fragment>
     <fragment
         android:id="@+id/splashFragment"
@@ -51,6 +57,17 @@
             android:id="@+id/action_registerFragment2_to_homeFragment"
             app:destination="@id/homeFragment" />
     </fragment>
+    <dialog
+        android:id="@+id/editDialogFragment"
+        android:name="com.e.wheretoeat.main.fragments.EditDialogFragment"
+        android:label="EditDialogFragment" >
+        <action
+            android:id="@+id/action_editDialogFragment_to_profileFragment"
+            app:destination="@id/profileFragment" />
+        <argument
+            android:name="currentUser"
+            app:argType="com.e.wheretoeat.main.data.User" />
+    </dialog>
 
 
 </navigation>
