--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -63,7 +63,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/priceTextView"
-            app:srcCompat="@drawable/ic_baseline_favorite_border_24"
+            app:srcCompat="@drawable/ic_love_normal"
             tools:layout_editor_absoluteX="294dp"
             tools:layout_editor_absoluteY="25dp" />
 
