--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -43,6 +43,7 @@
 
         </RelativeLayout>
 
+
         <LinearLayout
             android:layout_width="360dp"
             android:layout_height="wrap_content"
@@ -177,16 +178,30 @@
             </LinearLayout>
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/logOutButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="55dp"
-            android:background="@drawable/buttonstyle"
-            android:text="Log Out"
-            android:textColor="#000000" />
+            <Button
+                android:id="@+id/logOutButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="35dp"
+                android:background="@drawable/buttonstyle"
+                android:text="Log Out"
+                android:textColor="#000000" />
 
+            <Button
+                android:id="@+id/favoriteButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="35dp"
+                android:background="@drawable/buttonstyle"
+                android:text="Favorites"
+                android:textColor="#000000" />
+
+        </LinearLayout>
     </LinearLayout>
 </layout>
